little try with json

--- a/JavaProjectMagenta/pom.xml
+++ b/JavaProjectMagenta/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>commons-csv</artifactId>
             <version>1.9.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
     </dependencies>
+
+
 
 </project>
