--- a/JavaProjectMagenta/pom.xml
+++ b/JavaProjectMagenta/pom.xml
@@ -27,7 +27,14 @@
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
+
 
 
 
