--- a/AirQualityControlUnits/JavaProjectMagenta/pom.xml
+++ b/AirQualityControlUnits/JavaProjectMagenta/pom.xml
@@ -27,7 +27,24 @@
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>2.7.0</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
+
 
 
 
